test if changes only happen after a commit

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,3 +11,10 @@ body{
     font-weight: 300;
 }
 
+/* hero image */
+
+#hero-image{
+    height: 600px;
+    width: 100%;
+    background: url('../imges/hero-image.webp');
+}
