--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,6 +27,42 @@ h1, h2 {
      font-size: 280%;
 }
 
+/* navigation links */
+
+#menu{
+    font-size: 110%;
+    letter-spacing: 4px;
+}
+
+
+
+#menu ul{
+    float: right;
+}
+
+#menu li{
+    float: left;
+    list-style: none;
+    margin-right: 30px;
+}
+
+#menu a {
+    text-decoration: none;
+    color: inherit;
+}
+
+#menu, #logo{
+    line-height: 75px;
+}
+
+#menu a:hover{
+    border-bottom: 1px solid #3a3a3a;
+}
+
+.active{
+    border-bottom: 1px solid #3a3a3a;
+}
+
 /* hero image */
 
 #hero-image{
