--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,6 +25,7 @@ h1, h2 {
 #logo{
      float: left;
      font-size: 280%;
+     margin-left: 30px;
 }
 
 /* navigation links */
@@ -68,7 +69,7 @@ h1, h2 {
 #hero-outer{
     height: 600px;
     width: 100%;
-    overflow: hidden;.
+    overflow: hidden;
 
     position: relative;
 }
@@ -113,11 +114,35 @@ h1, h2 {
 
     background-color: rgba(241, 109, 107, .7);
 
-    bottom: 300px;
+    bottom: 30px;
     right: 150px;
 
     position: absolute;
 
 }
 
+/* club ethon*/
 
+#club-ethos {
+   height: 600px; 
+}
+
+#left-about {
+    padding-top: 30px;
+    width: 33%;
+    float: left;
+    background-color: blue;
+}
+
+#right-about {
+    padding-top: 30px;
+    width: 33%;
+    float: right;
+    background-color: silver;
+}
+
+#center-about {
+    width: 33%;
+    margin: 0 auto;
+    background-color: green;
+}
