--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -121,7 +121,7 @@ h1, h2 {
 
 }
 
-/* club ethon*/
+/* club ethos*/
 
 #club-ethos {
    height: 600px; 
@@ -131,14 +131,12 @@ h1, h2 {
     padding-top: 30px;
     width: 33%;
     float: left;
-    background-color: blue;
 }
 
 #right-about {
     padding-top: 30px;
     width: 33%;
     float: right;
-    background-color: silver;
 }
 
 #center-about {
@@ -146,3 +144,38 @@ h1, h2 {
     margin: 0 auto;
     background-color: green;
 }
+
+hr {
+    border-top: 1px solid #3a3a3a;
+    width: 100%;
+    margin: 5px;
+}
+
+.left-about-heading {
+    width: 60%;
+    float: right;
+    line-height: 20px;
+    clear: both;
+    margin-bottom: 50px;
+
+
+}
+
+.right-about-heading {
+    width: 60%;
+    float: left;
+    line-height: 20px;
+    clear: both;
+    margin-bottom: 50px;
+
+
+}
+
+.right-about-heading h2 {
+    text-align: right;
+}
+
+.right-about-heading {
+    text-align: right;
+}
+
