--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -202,3 +202,14 @@ hr {
     border-radius: 50%;
 }
 
+
+/* event times */
+
+#times {
+   background-image: url('../imges/dublin-city.webp'); 
+   background-repeat: no-repeat;
+   background-size: cover;
+   background-position: center;
+   width: 100%;
+   overflow: hidden;
+}
