--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -293,6 +293,13 @@ footer {
         padding: 0;
     }
 
+    #times > div {
+        width: 100%;
+        clear: both;
+        height: 150px;
+        padding: 0;
+    }
+
     hr{ 
         display: none;
     }
@@ -334,6 +341,8 @@ footer {
         text-align: center;
         padding: 0 20px;
     }
+
+
 
 
     
